# VIDPOW

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  README.md
CMakeModules/: FindRocksDB.cmake  Findsnappy.cmake  Findzstd.cmake
contrib/: fullnode.config.ini
doc/: building.md  plugin.md  testing.md
example_plugins/hello_api/: CMakeLists.txt  hello_api_plugin.cpp
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  database_api.cpp  impacted.cpp  plugin.cpp
libraries/app/include/wls/app/: api.hpp  api_access.hpp  api_context.hpp  application.hpp  applied_operation.hpp  database_api.hpp  impacted.hpp  plugin.hpp  state.hpp  wls_api_objects.hpp
libraries/chain/: CMakeLists.txt  block_log.cpp  database.cpp  fork_database.cpp  shared_authority.cpp  transaction_object.cpp  witness_schedule.cpp  wls_evaluator.cpp  wls_objects.cpp
libraries/chain/hardfork.d/: 0-preamble.hf
libraries/chain/include/wls/chain/: account_object.hpp  block_log.hpp  block_summary_object.hpp  comment_object.hpp  custom_operation_interpreter.hpp  (+20 more)
libraries/chain/util/: reward.cpp
libraries/chainbase/include/chainbase/: chainbase.hpp
libraries/manifest/: CMakeLists.txt
libraries/manifest/templates/plugins/: CMakeLists.txt.j2  mf_plugins.cpp.j2
libraries/manifest/wls_manifest/: plugins.py
libraries/net/: node.cpp  peer_connection.cpp
libraries/plugins/: CMakeLists.txt
libraries/plugins/account_by_key/: CMakeLists.txt  account_by_key_api.cpp  account_by_key_plugin.cpp  plugin.json
libraries/plugins/account_by_key/include/wls/account_by_key/: account_by_key_api.hpp  account_by_key_objects.hpp  account_by_key_plugin.hpp
libraries/plugins/account_history/: CMakeLists.txt  account_history_plugin.cpp  plugin.json
libraries/plugins/account_history/include/wls/account_history/: account_history_plugin.hpp
libraries/plugins/account_statistics/: CMakeLists.txt  account_statistics_api.cpp  account_statistics_plugin.cpp  plugin.json
libraries/plugins/account_statistics/include/wls/account_statistics/: account_statistics_api.hpp  account_statistics_plugin.hpp
libraries/plugins/auth_util/: CMakeLists.txt  auth_util_api.cpp  auth_util_plugin.cpp  plugin.json
libraries/plugins/auth_util/include/wls/plugins/auth_util/: auth_util_api.hpp  auth_util_plugin.hpp
libraries/plugins/block_info/: CMakeLists.txt  block_info_api.cpp  block_info_plugin.cpp  plugin.json
libraries/plugins/block_info/include/wls/plugins/block_info/: block_info.hpp  block_info_api.hpp  block_info_plugin.hpp
libraries/plugins/blockchain_statistics/: CMakeLists.txt  blockchain_statistics_api.cpp  blockchain_statistics_plugin.cpp  plugin.json
libraries/plugins/blockchain_statistics/include/wls/blockchain_statistics/: blockchain_statistics_api.hpp  blockchain_statistics_plugin.hpp
libraries/plugins/changelog/: CMakeLists.txt  changelog_api.cpp  changelog_plugin.cpp  plugin.json
libraries/plugins/changelog/include/wls/plugins/changelog/: changelog_api.hpp  changelog_plugin.hpp
libraries/plugins/debug_node/: CMakeLists.txt  debug_node_api.cpp  debug_node_plugin.cpp  plugin.json
libraries/plugins/debug_node/include/wls/plugins/debug_node/: debug_node_api.hpp  debug_node_plugin.hpp
libraries/plugins/delayed_node/: CMakeLists.txt  delayed_node_plugin.cpp  plugin.json
libraries/plugins/delayed_node/include/wls/delayed_node/: delayed_node_plugin.hpp
libraries/plugins/follow/: CMakeLists.txt  follow_api.cpp  follow_evaluators.cpp  follow_operations.cpp  follow_plugin.cpp  plugin.json
libraries/plugins/follow/include/wls/follow/: follow_api.hpp  follow_objects.hpp  follow_operations.hpp  follow_plugin.hpp
libraries/plugins/private_message/: CMakeLists.txt  plugin.json  private_message_plugin.cpp
libraries/plugins/private_message/include/wls/private_message/: private_message_evaluators.hpp  private_message_operations.hpp  private_message_plugin.hpp
libraries/plugins/raw_block/: CMakeLists.txt  plugin.json  raw_block_api.cpp  raw_block_plugin.cpp
libraries/plugins/raw_block/include/wls/plugins/raw_block/: raw_block_api.hpp  raw_block_plugin.hpp
libraries/plugins/tags/: CMakeLists.txt  plugin.json  tags_plugin.cpp
libraries/plugins/tags/include/wls/tags/: tags_plugin.hpp
libraries/plugins/witness/: CMakeLists.txt  plugin.json  witness_evaluators.cpp  witness_operations.cpp  witness_plugin.cpp
libraries/plugins/witness/include/wls/witness/: witness_objects.hpp  witness_operations.hpp  witness_plugin.hpp
libraries/protocol/: CMakeLists.txt  asset.cpp  authority.cpp  block.cpp  get_config.cpp  operations.cpp  sign_state.cpp  transaction.cpp  types.cpp  version.cpp  wls_operations.cpp
libraries/protocol/include/wls/protocol/: asset.hpp  authority.hpp  base.hpp  block.hpp  block_header.hpp  config.hpp  exceptions.hpp  fixed_string.hpp  get_config.hpp  operation_util.hpp  operation_util_impl.hpp  operations.hpp  protocol.hpp  sign_state.hpp  transaction.hpp  types.hpp  version.hpp  wls_operations.hpp  wls_virtual_operations.hpp
libraries/wallet/: CMakeLists.txt  Doxyfile.in  api_documentation_standin.cpp  generate_api_documentation.pl  wallet.cpp
programs/: CMakeLists.txt
programs/build_helpers/: check_reflect.py  get_config_check.sh
programs/cli_wallet/: CMakeLists.txt  main.cpp
programs/js_operation_serializer/: CMakeLists.txt  main.cpp
programs/size_checker/: CMakeLists.txt  main.cpp
programs/util/: CMakeLists.txt  get_dev_key.cpp  inflation_model.cpp  newplugin.py  schema_test.cpp  sign_digest.cpp  sign_transaction.cpp  test_block_log.cpp  test_changelog.cpp  test_fixed_string.cpp  test_shared_mem.cpp
programs/whaled/: CMakeLists.txt  main.cpp
python_scripts/steemdebugnode/: debugnode.py  private_testnet.py
python_scripts/tests/: debug_hardforks.py  test_payouts.py
tests/: CMakeLists.txt  README.md
tests/common/: database_fixture.cpp  database_fixture.hpp
tests/plugin_tests/: main.cpp  plugin_ops.cpp
tests/tests/: basic_tests.cpp  block_tests.cpp  live_tests.cpp  main.cpp  operation_tests.cpp  operation_time_tests.cpp  serialization_tests.cpp
(+12 files in other folders)
